Get rid of Delegate.Sass

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -423,7 +423,7 @@
           "hash": "heg/R7CAAjaiPp4z7gRAGgthRb5FlqqAYh64uHMg3v8="
         }
       },
-      "is_incremental": false,
+      "is_incremental": true,
       "version": ""
     },
     {
@@ -452,7 +452,7 @@
           "can_incremental": true,
           "incrementalPhase": "build",
           "total_file_count": 3,
-          "skipped_file_count": 2
+          "skipped_file_count": 3
         },
         "ManagedReferenceDocumentProcessor": {
           "can_incremental": true,
