--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -420,10 +420,10 @@
       "output": {
         ".html": {
           "relative_path": "index.html",
-          "hash": "9VIX2vxtnbQTRR9cKLKaN3hEZF5UgMrB7sCSQVTUvKg="
+          "hash": "tmQDZGQzSb53/vRXMFv+cYd3n4FYffho9OUDhX1rwe0="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -452,7 +452,7 @@
           "can_incremental": true,
           "incrementalPhase": "build",
           "total_file_count": 3,
-          "skipped_file_count": 3
+          "skipped_file_count": 2
         },
         "ManagedReferenceDocumentProcessor": {
           "can_incremental": true,
